Fixed issue with overflow property on the navbar-collapse.
This issue was affecting the search button when looking for councils
results.

--- a/scoring/static/scoring/scss/navbar.scss
+++ b/scoring/static/scoring/scss/navbar.scss
@@ -66,6 +66,7 @@ $navbar-mobile-breakpoint: 1200px;
         @include transition(height 0.3s ease-in-out);
         &.show-height {
             height: auto;
+            overflow: visible;
         }
         &.collapse:not(.show-height) {
             display: block;
